# gear

./: .gitignore  README.md  gear.desktop  gear.sh  gear_postprocess.desktop  gear_postprocess.sh  icon_credits.txt  launcher_setup.sh
icons/: icon_credits.txt
launchers/: gear.desktop  gear_playback.desktop  gear_postprocess.desktop
src/gear_data_handler/: CMakeLists.txt  epydoc.config  mainpage.dox  nodelets.xml  package.xml  setup.py
src/gear_data_handler/cfg/: Playback.cfg
src/gear_data_handler/include/gear_data_handler/: log_audio.h  log_bags.h  log_images.h  log_pointcloud.h  log_tracking.h  logger.h  playback.h  synchronize_images.h
src/gear_data_handler/launch/: audio_logger.launch  calibration_logger.launch  image_logger.launch  playback.launch  pointcloud_logger.launch  synchronizer.launch  tracking_logger.launch
src/gear_data_handler/python/gear_data_handler/: log_calibration_data.py  postprocess_cli.py  postprocessor.py  synchronized_image_logger.py
src/gear_data_handler/src/: log_audio.cpp  log_bags.cpp  log_images.cpp  log_pointcloud.cpp  log_tracking.cpp  logger.cpp  playback.cpp  synchronize_images.cpp
src/gear_data_handler/srv/: TimeExtent.srv
src/gear_diagnostics/: CMakeLists.txt  epydoc.config  mainpage.dox  package.xml
src/gear_diagnostics/config/: gear_analyzers.yaml  gear_analyzers_5k.yaml
src/gear_diagnostics/include/gear_diagnostics/: message_monitor.h
src/gear_diagnostics/launch/: camera_diagnostics.launch  diagnostics.launch  diagnostics_image_logger.launch  disk_diagnostics.launch  logger_diagnostics.launch
src/gear_diagnostics/python/: disk_monitor.py  message_monitor.py
src/gear_diagnostics/python/gear_diagnostics/: disk_monitor.py
src/gear_diagnostics/src/: camera_monitor.cpp  logger_monitor.cpp  message_monitor.cpp
src/gear_gui/: CMakeLists.txt  package.xml  plugin.xml
src/gear_gui/gear_gui/: CMakeLists.txt  package.xml
src/gear_gui/gear_gui/config/: adam.perspective  caili.perspective  controller.perspective  left.perspective  right.perspective
src/gear_gui/gear_gui_launch/: CMakeLists.txt  package.xml
src/gear_gui/gear_gui_launch/config/: controller.perspective  controller_simple.perspective  playback.perspective
src/gear_gui/gear_gui_launch/launch/: data_collection_gui.launch  playback_gui.launch  postprocess_gui.launch
src/gear_gui/gear_image_capture/: CMakeLists.txt  epydoc.config  mainpage.dox  package.xml  plugin.xml  setup.py
src/gear_gui/gear_image_capture/config/: settings.yaml
src/gear_gui/gear_image_capture/resource/: gear_image_capture.ui
src/gear_gui/gear_image_capture/scripts/: gear_image_capture
src/gear_gui/gear_image_capture/src/gear_image_capture/: image_capture.py
src/gear_gui/gear_playback/: CMakeLists.txt  epydoc.config  mainpage.dox  package.xml  plugin.xml
src/gear_gui/gear_playback/resource/: gear_playback.ui
src/gear_gui/gear_playback/scripts/: gear_playback
src/gear_gui/gear_playback/src/gear_playback/: playback.py
src/gear_gui/gear_postprocess/: CMakeLists.txt  epydoc.config  mainpage.dox  package.xml  plugin.xml
src/gear_gui/gear_postprocess/resource/: gear_postprocess.ui
src/gear_gui/gear_postprocess/scripts/: gear_postprocess
src/gear_gui/gear_postprocess/src/gear_postprocess/: postprocess.py
src/gear_gui/gear_session_duration/: CMakeLists.txt  epydoc.config  mainpage.dox  package.xml  plugin.xml
src/gear_gui/gear_session_duration/config/: settings.yaml
src/gear_gui/gear_session_duration/resource/: gear_session_duration.ui
src/gear_gui/gear_session_duration/scripts/: gear_session_duration
src/gear_gui/gear_session_duration/src/gear_session_duration/: session_duration.py
src/gear_gui/resource/: gear_image_capture.ui
src/gear_gui/src/gear_gui/: image_capture.py
src/gear_image_handler/: CMakeLists.txt  nodelets.xml  package.xml
src/gear_image_handler/include/gear_image_handler/: log_images.h  log_pointcloud.h  log_synchronized_images.h  logger.h  synchronize_images.h
src/gear_image_handler/launch/: image_logger.launch  pointcloud_logger.launch  synchronized_logger.launch  synchronizer.launch
src/gear_image_handler/python/: image_reader.py  postprocess_cli.py  postprocess_node.py  postprocessor.py  synchronized_image_logger.py
src/gear_image_handler/src/: log_images.cpp  log_pointcloud.cpp  log_synchronized_images.cpp  logger.cpp  synchronize_images.cpp  voxelizer.cpp
src/gear_launch/: CMakeLists.txt  package.xml
src/gear_launch/calibration/: CalibrationTest.txt  calib_log.txt  camera_poses.yaml  k1_ir.yaml  k2_color.yaml  k2_depth.yaml  k2_ir.yaml  k2_pose.yaml  k3_color.yaml  k3_ir.yaml  k3_pose.yaml  p1.yaml  p2.yaml  vicon2k2.txt  vicon2k2.yaml
src/gear_launch/calibration/001532335047/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
src/gear_launch/calibration/024208544747/: calib_color.yaml
src/gear_launch/calibration/025872444747/: calib_depth.yaml
src/gear_launch/calibration/105581140847/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
src/gear_launch/calibration/308780235147/: calib_color.yaml  calib_depth.yaml  calib_pose.yaml
src/gear_launch/config/: env.sh  tag_descriptions.yaml
src/gear_launch/launch/: april_tag_tracker.launch  ar_tag_tracker.launch  audio_gear.launch  gear.launch  kinect.launch  kinect_gear.launch  logger_gear.launch  marker_tracker.launch  opt_calibration_master_gear.launch  pointgrey.launch  pointgrey_gear.launch  postprocess_gear.launch  tracker_gear.launch
src/gear_launch/scripts/: get_mic_info.py
src/gear_tf/: CMakeLists.txt  epydoc.config  mainpage.dox  package.xml
src/gear_tf/launch/: tf_broadcaster.launch
src/gear_tf/python/gear_tf/: tf_broadcaster.py
