<?xml version="1.0"?>
<package>
  <name>gear_data_handler</name>
  <version>0.0.0</version>
  <description>The gear_data_handler package</description>
  <maintainer email="kan.prasanna@gmail.com">Prasanna kannappan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>apriltags_ros</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>apriltags_ros</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>audio_common_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
