<?xml version="1.0"?>
<package>
  <name>gear_tf</name>
  <version>0.0.0</version>
  <description>The gear_tf package</description>
  <maintainer email="kan.prasanna@gmail.com">Prasanna kannappan</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>rospy</run_depend>  
  <run_depend>tf2</run_depend>  
  <run_depend>tf2_ros</run_depend>  

  <export>
    <rosdoc config="${prefix}/rosdoc.yaml" />
  </export>    
</package>
