<?xml version="1.0"?>
<package>
  <name>gear_gui</name>
  <version>0.0.0</version>
  <description>The gear_gui package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kan.prasanna@gmail.com">Prasanna Kannappan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gear_image_capture</run_depend>
  <run_depend>gear_session_duration</run_depend>
  <run_depend>gear_postprocess</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
