<?xml version="1.0"?>
<package>
  <name>gear_gui</name>
  <version>0.0.0</version>
  <description>The gear_gui package</description>
  <maintainer email="kan.prasanna@gmail.com">Prasanna Kannappan</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gear_image_capture</run_depend>
  <run_depend>gear_session_duration</run_depend>
  <run_depend>gear_postprocess</run_depend>
  <run_depend>gear_playback</run_depend>
  <run_depend>gear_gui_launch</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
