<?xml version="1.0"?>
<package>
  <name>gear_gui_launch</name>
  <version>0.0.0</version>
  <description>Package to hold all launch and configuration files for the gear guis</description>
  <maintainer email="kan.prasanna@gmail.com">Prasanna kannappan</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
