<?xml version="1.0"?>
<package>
  <name>gear_image_capture</name>
  <version>0.0.0</version>
  <description>The gear image capture gui interface plugin</description>
  <maintainer email="kan.prasanna@gmail.com">Prasanna Kannappan</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <rosdoc config="${prefix}/rosdoc.yaml" />
  </export>
</package>